authentication for the controllers
